# BSSSAT

./: .gitignore  Adams-motivic-E2.csv  main.py  pyproject.toml
src/: Main code for diffls.py  Main_code_for_diffls.py  Output_find_diff.csv  Prerna all_possible_differentials.csv  check_for_hidden_tau_torsion  differential.py  ext.py  ext_class.py  find_differential.py  latex_utils.py  literal_manager.py  out.csv  product_of_tau_multiple.py  sat_solver.py  structure.txt
src/name_correlation/: Adams-motivic-name-correlation-ambiguous.csv  Adams-motivic-name-correlation-unmatched.csv  Adams-motivic-name-correlation.csv  README.md  classify_h1_periodicity.py  correlate_motivic_names.py  run_pipeline.sh
src/sat_solver/: Adams-classical-E2.csv  __init__.py  differential.py  ext.py  ext_class.py  latex_utils.py  literal_manager.py  out.csv  sat_solver.py
src/satsolver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
